# ESP32_codes

./: Readme.md  edge_intr_sleep.rar  my_workspace copy.code-workspace  my_workspace.code-workspace
amg8833_cv/: CMakeLists.txt  sdkconfig.old
amg8833_cv/main/: CMakeLists.txt  cv.c  cv.h  dummy.c  main.c  network_common.h
amg8833_detect/: CMakeLists.txt
amg8833_detect/lib/: my_mqtt.c  network_common.h
amg8833_detect/main/: CMakeLists.txt  helper.c  main.c
amg8833_simulation/: CMakeLists.txt  sdkconfig
amg8833_simulation/lib/: grideye_api_lv1.c  sim_uart.c  sim_uart.h
amg8833_simulation/main/: CMakeLists.txt  main.c
amg8833_tracking/cppinclude/: human_object.hpp  tracking.hpp
amg8833_tracking/cpplib/: human_object.cpp  tracking.cpp
amg8833_tracking/include/: feature_extraction.h  network_common.h
amg8833_tracking/lib/: cv.h  cv_api.c  cv_functions.c  cv_grideye.c  cv_validation.c  detect_api.c  feature_extraction.c  grideye_api_lv1.h  network_mqtt.c  sim_uart.c
amg8833_tracking/main/: CMakeLists.txt  helper.c  main.c  main.cpp  main.h  main.hpp
amg8833_ulp/: CMakeLists.txt  sdkconfig.old
amg8833_ulp/lib/: cv_api.c  cv_functions.c  cv_validation.c
amg8833_ulp/main/: CMakeLists.txt  helper.c  main.c  main.h
amg8833_ulp/main/ulp/: grideye_main.S
code_review_lv2/: CMakeLists.txt
code_review_lv2/lib/: grideye_api_common.h  grideye_api_lv1.c  grideye_api_lv2.c  grideye_api_lv2.h
code_review_lv2/main/: CMakeLists.txt  grideye_api_lv2_sample.c  main.c
code_review_lv3/: grideye_api_lv3.h  grideye_api_lv3_sample.c
cv_test_on_windows/: cv.c  cv.h  main.c
edge_intr2/: CMakeLists.txt
edge_intr2/include/: edge_intr_sleep.h  network_common.h
edge_intr2/main/: CMakeLists.txt  main.c
edge_intr2/src/: edge_intr_sleep.c
edge_intr_light_sleep/: sdkconfig  sdkconfig.old
edge_intr_light_sleep/include/: edge_intr_debounce.h  network_common.h
edge_intr_light_sleep/lib/: edge_intr_debounce.c  my_mqtt.c  my_wifi.c  sntpController.c
edge_intr_light_sleep/main/: CMakeLists.txt  main.c
edge_intr_no_wifi/main/: CMakeLists.txt  edge_intr_sleep.c  edge_intr_sleep.h  main.c
edge_intr_sleep/: sdkconfig
edge_intr_sleep/src/: my_wifi.c
exer_deadlock/: CMakeLists.txt
exer_deadlock/main/: eat_arbitrator.c  eat_hierarchy.c  eat_timeout.c  main.c  main.h
exer_deep/main/: commands_corner_cases.c  commands_corner_cases.h  edge_intr_sleep.h  main.c
exer_invertion/: CMakeLists.txt
exer_invertion/main/: main.c
exer_malloc/: CMakeLists.txt
exer_malloc/main/: CMakeLists.txt  exer_malloc.c
exer_queue/: CMakeLists.txt
exer_queue/main/: exer_queue.c  (+1 more)
exer_uart/: CMakeLists.txt
exer_ulp/: CMakeLists.txt  sdkconfig
i2c_practice/: CMakeLists.txt
intr_wake_ext1/: README.txt  sdkconfig.old
intr_wake_ext1/main/: CMakeLists.txt  README.txt  main.c
intr_wake_ulp/: .gitigore
mqtt_practice/: CMakeLists.txt
project1/: CMakeLists.txt
rtos_blink/: CMakeLists.txt  esp8266.patch  sdkconfig.old
sntp/: sdkconfig
software_timer/: CMakeLists.txt
template/: CMakeLists.txt
test_nvs/: CMakeLists.txt
ulp_softi2c/: CMakeLists.txt  sdkconfig.old
wifi_practice/: CMakeLists.txt  sdkconfig
(+50 files in other folders)
